@@ -26,23 +26,23 @@ function get_imdb_info($imdb_id, $title = true)
             return null;
         }
         $imdb_data = [
-            'title'       => $movie->title(),
-            'director'    => array_slice($movie->director(), 0, 30),
-            'writing'     => array_slice($movie->writing(), 0, 30),
-            'producer'    => array_slice($movie->producer(), 0, 30),
-            'composer'    => array_slice($movie->composer(), 0, 30),
-            'cast'        => array_slice($movie->cast(), 0, 30),
-            'genres'      => $movie->genres(),
+            'title' => $movie->title(),
+            'director' => array_slice($movie->director(), 0, 30),
+            'writing' => array_slice($movie->writing(), 0, 30),
+            'producer' => array_slice($movie->producer(), 0, 30),
+            'composer' => array_slice($movie->composer(), 0, 30),
+            'cast' => array_slice($movie->cast(), 0, 30),
+            'genres' => $movie->genres(),
             'plotoutline' => $movie->plotoutline(true),
-            'trailers'    => $movie->trailers(true, true),
-            'language'    => $movie->language(),
-            'rating'      => $movie->rating(),
-            'year'        => $movie->year(),
-            'runtime'     => $movie->runtime(),
-            'votes'       => $movie->votes(),
-            'critics'     => $movie->metacriticRating(),
-            'poster'      => $movie->photo(false),
-            'country'     => $movie->country(),
+            'trailers' => $movie->trailers(true, true),
+            'language' => $movie->language(),
+            'rating' => $movie->rating(),
+            'year' => $movie->year(),
+            'runtime' => $movie->runtime(),
+            'votes' => $movie->votes(),
+            'critics' => $movie->metacriticRating(),
+            'poster' => $movie->photo(false),
+            'country' => $movie->country(),
         ];
 
         $cache->set('imdb_' . $imdb_id, $imdb_data, 604800);
@@ -62,23 +62,23 @@ function get_imdb_info($imdb_id, $title = true)
     }
 
     $imdb = [
-        'title'       => 'Title',
-        'country'     => 'Country',
-        'director'    => 'Directors',
-        'writing'     => 'Writers',
-        'producer'    => 'Producer',
-        'plot'        => 'Description',
-        'composer'    => 'Music',
+        'title' => 'Title',
+        'country' => 'Country',
+        'director' => 'Directors',
+        'writing' => 'Writers',
+        'producer' => 'Producer',
+        'plot' => 'Description',
+        'composer' => 'Music',
         'plotoutline' => 'Plot outline',
-        'trailers'    => 'Trailers',
-        'genres'      => 'All genres',
-        'language'    => 'Language',
-        'rating'      => 'Rating',
-        'year'        => 'Year',
-        'runtime'     => 'Runtime',
-        'votes'       => 'Votes',
-        'critics'     => 'Critic Rating',
-        'cast'        => 'Cast',
+        'trailers' => 'Trailers',
+        'genres' => 'All genres',
+        'language' => 'Language',
+        'rating' => 'Rating',
+        'year' => 'Year',
+        'runtime' => 'Runtime',
+        'votes' => 'Votes',
+        'critics' => 'Critic Rating',
+        'cast' => 'Cast',
     ];
 
     foreach ($imdb_data['cast'] as $pp) {
@@ -180,16 +180,16 @@ function get_imdb_info_short($imdb_id)
         }
         $imdb_data = [
             'orig_poster' => $movie->photo(false),
-            'poster'      => url_proxy($movie->photo(false), true, 150),
+            'poster' => url_proxy($movie->photo(false), true, 150),
             'placeholder' => url_proxy($movie->photo(false), true, 150, null, 10),
-            'title'       => $movie->title(),
-            'vote_count'  => $movie->votes(),
-            'critic'      => $movie->metacriticRating(),
-            'rating'      => $movie->rating(),
-            'overview'    => $movie->plotoutline(true),
-            'mpaa'        => $movie->mpaa(),
+            'title' => $movie->title(),
+            'vote_count' => $movie->votes(),
+            'critic' => $movie->metacriticRating(),
+            'rating' => $movie->rating(),
+            'overview' => $movie->plotoutline(true),
+            'mpaa' => $movie->mpaa(),
             'mpaa_reason' => $movie->mpaa_reason(),
-            'id'          => $imdbid,
+            'id' => $imdbid,
         ];
         $cache->set('imdb_short_' . $imdb_id, $imdb_data, 604800);
     }
@@ -276,7 +276,7 @@ function get_upcoming()
 
     $imdb_data = $cache->get('imdb_upcoming_');
     if ($imdb_data === false || is_null($imdb_data)) {
-        $url = "https://www.imdb.com/movies-coming-soon/";
+        $url = 'https://www.imdb.com/movies-coming-soon/';
         $imdb_data = fetch($url);
         $cache->set('imdb_upcoming_', $imdb_data, 86400);
     }
