@@ -1,6 +1,6 @@
 <?php
 
-function search_omdb_by_title($title, $year)
+function search_omdb_by_title($title, int $year)
 {
     global $cache;
 
@@ -12,26 +12,27 @@ function search_omdb_by_title($title, $year)
 
     $hash = hash('sha256', $title . $year);
     $omdb_data = $cache->get('omdb_' . $hash);
-    if ($omdb_data === false || is_null($omdb_data)) {
-        $url = "http://www.omdbapi.com/?apikey=$apikey&t=" . urlencode($title) . "&y=" . urlencode($year) . "&plot=full";
-        $content = fetch($url);
-        if (!$content) {
-            return false;
-        }
-        $omdb_data = json_decode($content, true);
-        if (!empty($omdb_data)) {
-            if (!empty($omdb_data['Poster'])) {
-                $imdbid = $omdb_data['imdbID'];
-                $insert = $cache->get('insert_imdb_imdbid_' . $imdbid);
-                if ($insert === false || is_null($insert)) {
-                    $sql = "INSERT IGNORE INTO images (imdb_id, url, type) VALUES ('$imdbid', '{$omdb_data['Poster']}', 'poster')";
-                    sql_query($sql) or sqlerr(__FILE__, __LINE__);
-                    $cache->set('insert_imdb_imdbid_' . $imdbid, 0, 604800);
-                }
-            }
-            $cache->set('omdb_' . $hash, $omdb_data, 604800);
-        }
+//    if ($omdb_data === false || is_null($omdb_data)) {
+    $url = "http://www.omdbapi.com/?apikey=$apikey&t=" . urlencode(strtolower($title)) . '&y=' . urlencode($year) . '&plot=full';
+    $content = fetch($url);
+    if (!$content) {
+        return false;
     }
+    $omdb_data = json_decode($content, true);
+    if (!empty($omdb_data['Title']) && strtolower($omdb_data['Title']) === strtolower($title)) {
+        //dd($omdb_data);
+        if (!empty($omdb_data['Poster'])) {
+            $imdbid = $omdb_data['imdbID'];
+            $insert = $cache->get('insert_imdb_imdbid_' . $imdbid);
+            if ($insert === false || is_null($insert)) {
+                $sql = "INSERT IGNORE INTO images (imdb_id, url, type) VALUES ('$imdbid', '{$omdb_data['Poster']}', 'poster')";
+                sql_query($sql) or sqlerr(__FILE__, __LINE__);
+                $cache->set('insert_imdb_imdbid_' . $imdbid, 0, 604800);
+            }
+        }
+        $cache->set('omdb_' . $hash, $omdb_data, 604800);
+    }
+//    }
 
     return $omdb_data;
 }
@@ -69,7 +70,7 @@ function get_omdb_info($imdbid, $title = true)
         'Type',
         'imdbID',
         'Response',
-        'Ratings'
+        'Ratings',
     ];
 
     foreach ($omdb_data as $key => $value) {
